Refactor consume tests some more